--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,16 @@ spring.datasource.url=jdbc:h2:mem:springbatch;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.username=sa
 spring.datasource.password=
 
+#AWS Configuration
+cloud.aws.region.static=region-de-ejemplo
+cloud.aws.credentials.access-key=CLAVEDEACCESOEJEMPLO
+cloud.aws.credentials.secret-key=CLAVESECRETADEEJEMPLO
+cloud.aws.stack.auto=false
+
+#Others
+application.bucket.name=nombreDelBucket
+application.file.name=nombreDelArchivo
+
 #Liquibase Configuration
 spring.liquibase.change-log=classpath:/db/changelog/db.changelog.xml
 
