--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,15 @@
             <artifactId>liquibase-core</artifactId>
             <scope>runtime</scope>
         </dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>8.0.27</version>
+		</dependency>
 	</dependencies>
 
 	<build>
