--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,23 +1,19 @@
 cloud:
   aws:
     credentials:
-      access-key: CLAVEDEACCESOEJEMPLO
-      secret-key: CLAVESECRETADEEJEMPLO
+      access-key: ACCESSKEY
+      secret-key: SECRETKEY
     region:
-      static: region-de-ejemplo
+      static: REGION
     stack:
       auto: false
 
 spring:
   datasource1:
-    driverClassName: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://aurora57.cluster-cfkwcska1oxw.us-east-1.rds.amazonaws.com:3306/casouso?autoReconnect=true&useSSL=false
-    username: admin
-    password: admin123
-  datasource:
-    url: jdbc:h2:mem:springbatch;DB_CLOSE_ON_EXIT=FALSE
-    username: sa
-    password:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3307/demo
+    username: root
+    password: PASSWORD
   batch:
     initialize-schema: NEVER
     job.enabled: false
@@ -40,7 +36,7 @@ spring:
 #---
 application:
   file:
-    name: nombreDelArchivo
+    name: NOMBREARCHIVO
   bucket:
-    name: nombreDelBucket
+    name: NOMBREBUCKET
 
